examples/test/testpolicy9132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9132
  namespace: namespace169
spec:
  podSelector:
    matchLabels:
      key13: value26
      key5: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value42
          key15: value26
          key2: value27
      podSelector:
        matchLabels:
          key1: value5
          key12: value26
          key48: value24
